# osrc-gui

./: .gitignore  Cargo.toml  node_converter.py  osrc-gui.code-workspace  test.json  test_config_out.json
src/: file_structure.rs  main.rs  node.rs  viewer.rs
